--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      //得到手机屏幕的宽度
+      let htmlWidth = document.documentElement.clientWidth || document.body.clientWidth;
+      console.log('htmlWidth',htmlWidth)
+      //得到html的Dom元素
+      let htmlDom = document.getElementsByTagName('html')[0];
+      // if(htmlWidth>640){//超过640大小的，字体根部都是16px
+      //   htmlWidth=640;
+      //   console.log('htmlWidth-true',htmlWidth)
+      // }
+      //设置根元素字体大小
+      htmlDom.style.fontSize = htmlWidth / 40 + 'px';
+    </script>
   </body>
 </html>
