--- a/index.html
+++ b/index.html
@@ -2,24 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>dedsec_vue</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script>
-      //得到手机屏幕的宽度
-      let htmlWidth = document.documentElement.clientWidth || document.body.clientWidth;
-      console.log('htmlWidth',htmlWidth)
-      //得到html的Dom元素
-      let htmlDom = document.getElementsByTagName('html')[0];
-      // if(htmlWidth>640){//超过640大小的，字体根部都是16px
-      //   htmlWidth=640;
-      //   console.log('htmlWidth-true',htmlWidth)
-      // }
-      //设置根元素字体大小
-      htmlDom.style.fontSize = htmlWidth / 40 + 'px';
-    </script>
   </body>
 </html>
