--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>dedsec_vue</title>
+    <link rel="stylesheet" href="./static/bootstrap-3.3.7-dist/css/bootstrap.css">
+    <script src="static/bootstrap-3.3.7-dist/js/jquery.js"></script>
+    <script src="static/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
   </head>
   <body>
     <div id="app"></div>
